--- a/settings.json
+++ b/settings.json
@@ -86,6 +86,18 @@
     {
       "before": [
         "<leader>",
+        "a"
+      ],
+      "after": [],
+      "commands": [
+        {
+          "command": "workbench.action.files.saveFiles"
+        }
+      ]
+    },
+    {
+      "before": [
+        "<leader>",
         "n"
       ],
       "after": [],
