--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -308,6 +308,7 @@
   },
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform",
+    "editor.formatOnSave": true
   },
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
