--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
-
+set -g base-index 1
 
 # vim-like pane switching
 bind -r u last-window
