--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -14,6 +14,7 @@
   "explorer.compactFolders": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.confirmDelete": false,
+  "explorer.autoReveal": false,
   "window.closeWhenEmpty": true,
   "terminal.integrated.enableMultiLinePasteWarning": false,
   "diffEditor.renderSideBySide": false,
