--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -28,7 +28,16 @@ set -g status-right "#[fg=black,bright]#S"
 set -g window-status-format " #I "
 set -g window-status-current-format " #I "
 set -g window-status-bell-style "bg=red,nobold"
-set -g window-status-current-style "#{?window_zoomed_flag,bg=yellow,fg=magenta,nobold}"
+set -g window-status-current-style "bg=black,fg=magenta,nobold"
+set -g window-status-style "bg=black,fg=white,nobold"
+
+# Keybindings: split
+bind b split-window -v
+bind v split-window -h
+
+# Keybindings: windows
+bind -n C-Tab next-window
+bind -n C-S-Tab previous-window
 
 # Keybindings: hjkl
 bind k select-pane -U
@@ -40,11 +49,3 @@ bind -r K resize-pane -U
 bind -r J resize-pane -D
 bind -r H resize-pane -L
 bind -r L resize-pane -R
-
-# Keybindings: split
-bind b split-window -v
-bind v split-window -h
-
-# Keybindings: windows
-bind -n C-Tab next-window
-bind -n C-S-Tab previous-window
