Update tmux switching between windows

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -36,8 +36,8 @@ bind b split-window -v
 bind v split-window -h
 
 # Keybindings: windows
-bind -n C-Tab next-window
-bind -n C-S-Tab previous-window
+bind n next-window
+bind p previous-window
 
 # Keybindings: hjkl
 bind k select-pane -U
